[gd_scene load_steps=22 format=3 uid="uid://cun10ttfa8km3"]

[ext_resource type="Script" path="res://Project/Script/Player.gd" id="1_u452d"]
[ext_resource type="ArrayMesh" uid="uid://c3we8mii8xnmf" path="res://Project/Art/3DModels/RocketWing.obj" id="2_mhc7g"]
[ext_resource type="Script" path="res://Project/Script/PlayerAudio.gd" id="3_130j3"]
[ext_resource type="PackedScene" uid="uid://ddegmjco664ey" path="res://Project/Scenes/booster_particles.tscn" id="3_edpk5"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Project/Scenes/explosion_particles.tscn" id="4_tj10u"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Project/Scenes/success_particles.tscn" id="5_0tqrr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sdwx"]

[sub_resource type="CylinderMesh" id="CylinderMesh_cqwlj"]
top_radius = 0.6
bottom_radius = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_reu6r"]
albedo_color = Color(0.933333, 0, 0.215686, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_6wu6k"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sfbfc"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_1758s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fvvtp"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1sgaw"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8f4x2"]
albedo_color = Color(0.933333, 0, 0.215686, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xxqvq"]
albedo_color = Color(0.933333, 0, 0.215686, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_si2vo"]
points = PackedVector3Array(-0.214183, -0.948028, -0.451129, 0.0227317, 0.952146, 0.498887, 0.171488, 0.951995, 0.469018, -0.125934, 0.952684, -0.483291, 0.499663, -0.953674, -0.00688883, -0.387646, -0.93796, 0.315653, -0.483292, 0.952686, -0.12593, 0.375097, 0.940128, -0.329816, 0.171488, -0.951995, 0.469018, 0.140783, -0.945485, -0.479579, 0.469014, 0.952011, 0.171499, -0.387646, 0.93796, 0.315653, -0.483292, -0.952686, -0.12593, -0.183511, -0.943076, 0.464698, 0.407412, -0.946994, 0.288983, 0.375097, -0.940128, -0.329816, -0.395154, 0.955761, -0.305523, -0.479555, 0.945437, 0.14088, 0.464698, 0.943099, -0.183512, 0.140783, 0.945485, -0.479579, -0.243203, 0.945955, 0.436491, -0.479555, -0.945437, 0.14088, 0.288971, 0.946988, 0.407421, -0.395154, -0.955761, -0.305523, -0.0069906, -0.953641, 0.499658, 0.499663, 0.953674, -0.00688883, -0.271948, 0.943071, -0.419217, 0.464698, -0.943099, -0.183512, -0.125934, -0.952684, -0.483291, 0.315648, 0.937973, -0.387651, 0.469014, -0.952011, 0.171499, 0.407412, 0.946994, 0.288983)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ldldq"]
points = PackedVector3Array(-0.214183, -0.948028, -0.451129, 0.0227317, 0.952146, 0.498887, 0.171488, 0.951995, 0.469018, -0.125934, 0.952684, -0.483291, 0.499663, -0.953674, -0.00688883, -0.387646, -0.93796, 0.315653, -0.483292, 0.952686, -0.12593, 0.375097, 0.940128, -0.329816, 0.171488, -0.951995, 0.469018, 0.140783, -0.945485, -0.479579, 0.469014, 0.952011, 0.171499, -0.387646, 0.93796, 0.315653, -0.483292, -0.952686, -0.12593, -0.183511, -0.943076, 0.464698, 0.407412, -0.946994, 0.288983, 0.375097, -0.940128, -0.329816, -0.395154, 0.955761, -0.305523, -0.479555, 0.945437, 0.14088, 0.464698, 0.943099, -0.183512, 0.140783, 0.945485, -0.479579, -0.243203, 0.945955, 0.436491, -0.479555, -0.945437, 0.14088, 0.288971, 0.946988, 0.407421, -0.395154, -0.955761, -0.305523, -0.0069906, -0.953641, 0.499658, 0.499663, 0.953674, -0.00688883, -0.271948, 0.943071, -0.419217, 0.464698, -0.943099, -0.183512, -0.125934, -0.952684, -0.483291, 0.315648, 0.937973, -0.387651, 0.469014, -0.952011, 0.171499, 0.407412, 0.946994, 0.288983)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m4frf"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_s7cnl"]
points = PackedVector3Array(-0.214183, -0.948028, -0.451129, 0.0227317, 0.952146, 0.498887, 0.171488, 0.951995, 0.469018, -0.125934, 0.952684, -0.483291, 0.499663, -0.953674, -0.00688883, -0.387646, -0.93796, 0.315653, -0.483292, 0.952686, -0.12593, 0.375097, 0.940128, -0.329816, 0.171488, -0.951995, 0.469018, 0.140783, -0.945485, -0.479579, 0.469014, 0.952011, 0.171499, -0.387646, 0.93796, 0.315653, -0.483292, -0.952686, -0.12593, -0.183511, -0.943076, 0.464698, 0.407412, -0.946994, 0.288983, 0.375097, -0.940128, -0.329816, -0.395154, 0.955761, -0.305523, -0.479555, 0.945437, 0.14088, 0.464698, 0.943099, -0.183512, 0.140783, 0.945485, -0.479579, -0.243203, 0.945955, 0.436491, -0.479555, -0.945437, 0.14088, 0.288971, 0.946988, 0.407421, -0.395154, -0.955761, -0.305523, -0.0069906, -0.953641, 0.499658, 0.499663, 0.953674, -0.00688883, -0.271948, 0.943071, -0.419217, 0.464698, -0.943099, -0.183512, -0.125934, -0.952684, -0.483291, 0.315648, 0.937973, -0.387651, 0.469014, -0.952011, 0.171499, 0.407412, 0.946994, 0.288983)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nygbe"]
points = PackedVector3Array(0.0392752, -0.237834, -0.191111, 0.0303747, -0.206215, 0.179744, -0.026601, -0.207418, 0.180802, 0.00216927, 0.242291, 0.00219259, -0.189654, -0.236041, -0.0421301, 0.186943, -0.236585, 0.0538124, -0.164242, -0.238058, 0.129318, 0.129363, -0.238058, -0.164229, -0.0996111, -0.232425, -0.165009, 0.104346, -0.233812, 0.162809, 0.188882, -0.23902, -0.0500994, -0.191144, -0.237911, 0.0392768, -0.152408, -0.210487, -0.103319, -0.0501155, -0.239005, 0.18887, 0.158471, -0.238262, 0.113789, -0.0421369, -0.235969, -0.189625, -0.00518608, 0.231647, -0.0052011, 0.105553, -0.238058, -0.180156, -0.180129, -0.238058, 0.105546, -0.184014, -0.238293, -0.0648218, -0.0925768, -0.232981, 0.169494, 0.173499, -0.185818, 0.0162529, 0.169509, -0.232997, -0.0925684, 0.00206987, 0.235855, -0.00526675, -0.00525198, 0.235871, 0.00209243, 0.0538236, -0.236587, 0.186943, -0.128929, -0.232929, -0.143524, -0.176089, -0.192287, 0.0161928, 0.0162076, -0.192302, -0.176094, 0.120681, -0.202585, 0.134628, 0.0162716, 0.207326, -0.00515637, -0.0051731, 0.223585, 0.0092152)

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_u452d")

[node name="BodyRocket" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_7sdwx")
mesh = SubResource("CylinderMesh_cqwlj")

[node name="TopRocket" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1.7508, 0)
material_override = SubResource("StandardMaterial3D_reu6r")
mesh = SubResource("CylinderMesh_6wu6k")
skeleton = NodePath("../..")

[node name="LeftBooster" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.362481, -1.20746, 0)
material_override = SubResource("StandardMaterial3D_sfbfc")
mesh = SubResource("CylinderMesh_1758s")
skeleton = NodePath("../..")

[node name="MidleBooster" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.00553629, -1.20746, 0)
material_override = SubResource("StandardMaterial3D_fvvtp")
mesh = SubResource("CylinderMesh_1758s")
skeleton = NodePath("../..")

[node name="RightBooster" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.409739, -1.20746, 0)
material_override = SubResource("StandardMaterial3D_1sgaw")
mesh = SubResource("CylinderMesh_1758s")
skeleton = NodePath("../..")

[node name="RocketWingRight" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.914361, -0.434638, -0.014177)
material_override = SubResource("StandardMaterial3D_8f4x2")
mesh = ExtResource("2_mhc7g")
skeleton = NodePath("../..")

[node name="RocketWingLeft" type="MeshInstance3D" parent="BodyRocket"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, -0.945988, -0.434638, -0.014177)
material_override = SubResource("StandardMaterial3D_xxqvq")
mesh = ExtResource("2_mhc7g")
skeleton = NodePath("../..")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.362481, -1.20746, 0)
shape = SubResource("ConvexPolygonShape3D_si2vo")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.409739, -1.20746, 0)
shape = SubResource("ConvexPolygonShape3D_ldldq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_m4frf")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.00553629, -1.20746, 0)
shape = SubResource("ConvexPolygonShape3D_s7cnl")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1.7508, 0)
shape = SubResource("ConvexPolygonShape3D_nygbe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_130j3")
explosion = "res://Project/Art/Audio/SFX - Death Explosion.ogg"
perfect_land = "res://Project/Art/Audio/SFX - Success.ogg"
rocket_engine = "res://Project/Art/Audio/SFX - Main engine thrust.ogg"

[node name="BoosterParticles" parent="." instance=ExtResource("3_edpk5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.42237, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("3_edpk5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.418497, -1.46088, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("3_edpk5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.369178, -1.44181, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("4_tj10u")]

[node name="SuccessParticles" parent="." instance=ExtResource("5_0tqrr")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
